# rust-puzzles

./: Cargo.toml
src/: main.rs
src/aoc2021/: day1-1.rs  day1-2.rs  day2-1.rs  day2-2.rs  day3-1.rs
src/aoc2022/: 1a.rs  1b.rs  2a.rs  2b.rs  3a.rs
src/aoc2023/: 1-1.rs
src/challenge/: c001.rs  c002.rs  c003.rs  mod.rs
src/lib/: lib.rs  read.rs
src/openkattis/: 001hello.rs  002stones.rs  apaxiaaans.rs  autori.rs  batterup.rs  bela.rs  boatparts.rs  carrots.rs  chanukah.rs  cold.rs  dasblinkenlights.rs  detaileddifferences.rs  dicecup.rs  digitswap.rs  echoechoecho.rs  electricaloutlets.rs  everywhere.rs  faktor.rs  filip.rs  findingana.rs  freefood.rs  fyi.rs  grading.rs  grassseed.rs  greetings2.rs  heartrate.rs  hydrasheads.rs  isithalloween.rs  jackolanternjuxtaposition.rs  jumbojavelin.rs  k001.rs  knotknowledge.rs  lastfactorialdigit.rs  magictrick.rs  mod.rs  modulo.rs  nastyhacks.rs  natjecanje.rs  nsum.rs  oddecho.rs  (+23 more)
src/projecteuler/: c001.rs  c002.rs  c003.rs  c004.rs  c005.rs  c006.rs  c007.rs  c008.rs  c009.rs  c009b.rs  c010.rs  mod.rs
src/random/: collatz.rs
src/util/: mod.rs  read.rs
