[package]
name = "hello-world"
edition = "2021"
version = "0.1.0"

[lib]
name = "puzzles"
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "carrots"
path = "src/openkattis/carrots.rs"

[[bin]]
name = "echoechoecho"
path = "src/openkattis/echoechoecho.rs"

[[bin]]
name = "hello"
path = "src/openkattis/hello.rs"

[[bin]]
name = "nastyhacks"
path = "src/openkattis/nastyhacks.rs"

[[bin]]
name = "nsum"
path = "src/openkattis/nsum.rs"

[[bin]]
name = "planina"
path = "src/openkattis/planina.rs"

[[bin]]
name = "qaly"
path = "src/openkattis/qaly.rs"

[[bin]]
name = "sorttwonumbers"
path = "src/openkattis/sorttwonumbers.rs"

[[bin]]
name = "twostones"
path = "src/openkattis/twostones.rs"

[[bin]]
name = "twosum"
path = "src/openkattis/twosum.rs"

[[bin]]
name = "railroad2"
path = "src/openkattis/railroad2.rs"

[[bin]]
name = "pot"
path = "src/openkattis/pot.rs"

[[bin]]
name = "reversebinary"
path = "src/openkattis/reversebinary.rs"

[[bin]]
name = "pet"
path = "src/openkattis/pet.rs"

[[bin]]
name = "detaileddifferences"
path = "src/openkattis/detaileddifferences.rs"

[[bin]]
name = "triarea"
path = "src/openkattis/triarea.rs"

[[bin]]
name = "provincesandgold"
path = "src/openkattis/provincesandgold.rs"

[[bin]]
name = "tarifa"
path = "src/openkattis/tarifa.rs"

[[bin]]
name = "magictrick"
path = "src/openkattis/magictrick.rs"

[[bin]]
name = "boatparts"
path = "src/openkattis/boatparts.rs"

[[bin]]
name = "modulo"
path = "src/openkattis/modulo.rs"

[[bin]]
name = "simonsays"
path = "src/openkattis/simonsays.rs"

[[bin]]
name = "timeloop"
path = "src/openkattis/timeloop.rs"

[[bin]]
name = "ratingproblems"
path = "src/openkattis/ratingproblems.rs"

[[bin]]
name = "jumbojavelin"
path = "src/openkattis/jumbojavelin.rs"

[[bin]]
name = "jackolanternjuxtaposition"
path = "src/openkattis/jackolanternjuxtaposition.rs"

[[bin]]
name = "cold"
path = "src/openkattis/cold.rs"

[[bin]]
name = "hydrasheads"
path = "src/openkattis/hydrasheads.rs"

[[bin]]
name = "lastfactorialdigit"
path = "src/openkattis/lastfactorialdigit.rs"

[[bin]]
name = "autori"
path = "src/openkattis/autori.rs"

[[bin]]
name = "grading"
path = "src/openkattis/grading.rs"

[[bin]]
name = "electricaloutlets"
path = "src/openkattis/electricaloutlets.rs"

[[bin]]
name = "oddecho"
path = "src/openkattis/oddecho.rs"

[[bin]]
name = "knotknowledge"
path = "src/openkattis/knotknowledge.rs"

[[bin]]
name = "sumkindofproblem"
path = "src/openkattis/sumkindofproblem.rs"

[[bin]]
name = "r2"
path = "src/openkattis/r2.rs"

[[bin]]
name = "quadrant"
path = "src/openkattis/quadrant.rs"

[[bin]]
name = "everywhere"
path = "src/openkattis/everywhere.rs"

[[bin]]
name = "heartrate"
path = "src/openkattis/heartrate.rs"

[[bin]]
name = "grassseed"
path = "src/openkattis/grassseed.rs"

[[bin]]
name = "fyi"
path = "src/openkattis/fyi.rs"

[[bin]]
name = "faktor"
path = "src/openkattis/faktor.rs"

[[bin]]
name = "digitswap"
path = "src/openkattis/digitswap.rs"

[[bin]]
name = "dicecup"
path = "src/openkattis/dicecup.rs"

[[bin]]
name = "chanukah"
path = "src/openkattis/chanukah.rs"

[[bin]]
name = "bela"
path = "src/openkattis/bela.rs"

[[bin]]
name = "batterup"
path = "src/openkattis/batterup.rs"

[[bin]]
name = "stopwatch"
path = "src/openkattis/stopwatch.rs"

[[bin]]
name = "isithalloween"
path = "src/openkattis/isithalloween.rs"

[[bin]]
name = "greetings2"
path = "src/openkattis/greetings2.rs"

[[bin]]
name = "apaxiaaans"
path = "src/openkattis/apaxiaaans.rs"

[[bin]]
name = "tornbygge"
path = "src/openkattis/tornbygge.rs"

[[bin]]
name = "dasblinkenlights"
path = "src/openkattis/dasblinkenlights.rs"

[[bin]]
name = "trik"
path = "src/openkattis/trik.rs"

[[bin]]
name = "filip"
path = "src/openkattis/filip.rs"

[[bin]]
name = "smil"
path = "src/openkattis/smil.rs"

[[bin]]
name = "freefood"
path = "src/openkattis/freefood.rs"

[[bin]]
name = "1a"
path = "src/aoc2022/1a.rs"
